welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:14: error: not found: value Direction
		if (getDirection() == Direction.EAST) {
                                      ^